worker user duplicats after import fix
